test/Fail/Issue1436-23.err
Issue1436-23.agda:27.7-12: error: [AmbiguousParseForApplication]
Don't know how to parse • + •. Could mean any one of:
  c • •
  c • •
Operators used in the grammar:
  + (infix notation, level 0) [c (Issue1436-23.agda:9.5-6)] 
  + (infix notation, level 1) [c (Issue1436-23.agda:19.5-6)]
when scope checking • + •
